<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/doctor_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/doctor_appointments"
            android:icon="@drawable/appointments"
            android:title="@string/appointments" />

        <item
            android:id="@+id/doctor_pending_appointments"
            android:icon="@drawable/pending_appointments"
            android:title="Pending"/>

        <item
            android:id="@+id/doctor_patients"
            android:icon="@drawable/patients"
            android:title="@string/patients" />

    </group>

    <item android:title="@string/general">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/doctor_settings"
                    android:icon="@drawable/settings"
                    android:title="@string/settings" />


            </group>
        </menu>
    </item>
</menu>