<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/admin_doctors"
            android:icon="@drawable/patients"
            android:title="@string/doctors" />



    </group>

    <item android:title="@string/general">

        <menu>
            <group android:checkableBehavior="single">


                <item
                    android:id="@+id/statistics"
                    android:icon="@drawable/info_icon"
                    android:title="@string/info" />


                <item
                    android:id="@+id/admin_settings"
                    android:icon="@drawable/settings"
                    android:title="@string/settings" />


            </group>
        </menu>
    </item>
</menu>