<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/glucose"
                android:textColor="@color/color5"
                android:textSize="20sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="400dp" >

            </com.github.mikephil.charting.charts.LineChart>

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/blood"
                android:textColor="@color/color5"
                android:textSize="20sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart2"
                android:layout_width="match_parent"
                android:layout_height="400dp" >

            </com.github.mikephil.charting.charts.LineChart>

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/oxygenation"
                android:textColor="@color/color5"
                android:textSize="20sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart3"
                android:layout_width="match_parent"
                android:layout_height="400dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>